--- a/template (1).Rmd
+++ b/template (1).Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 Let's import a dataset
@@ -43,4 +45,90 @@ skimr::skim(litters_df)
 
 ```{r}
 litters_df =
-  read_csv("data")
+  read_csv("data_import_examples/FAS_litters.csv", na = c("NA", ".", ""))
+```
+
+## Import new dataset (FAS_pups)
+
+```{r}
+pups = 
+  read_csv("data_import_examples/FAS_pups.csv")
+```
+
+```{r}
+pups_df=
+  read_csv(
+    "data_import_examples/FAS_pups.csv",
+    skip = 3,
+    na = c("NA", ".", "")
+  )
+
+pups_df = 
+  janitor::clean_names(pups_df)
+
+pups_df
+```
+
+## What about excel
+
+CSVs are really great but sometimes you get an excel file.
+
+```{r}
+mlb_df = 
+  read_excel("data_import_examples/mlb11.xlsx")
+```
+
+Import LotR word counts.
+
+```{r}
+fotr_df=
+  read_excel("data_import_examples/LotR_Words.xlsx", range = "B3:D6")
+```
+
+## Importing data from SAS
+
+Import the PULSE dataset
+
+```{r}
+pulse_df =
+  read_sas("data_import_examples/public_pulse_data.sas7bdat")
+
+pulse_df = 
+  janitor::clean_names(pulse_df)
+```
+
+## Why does Jeff hate read.csv so much?
+
+```{r}
+litters_df_base = 
+  read.csv("data_import_examples/FAS_litters.csv")
+```
+
+```{r, eval = FASLE}
+litters_df_base = 
+  read.csv("data_import_examples/FAS_litters.csv")
+```
+
+## What about data exporting?
+
+```{r}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
